@@ -187,237 +187,6 @@ edit_cell (GtkCellRendererText *cellrenderertext,
 }
 
 void
-Canjeables (GtkWidget *widget, gpointer data)
-{
-  gboolean dato = (gboolean)data;
-
-  if (dato == FALSE)
-    {
-      gtk_widget_set_sensitive (main_window, TRUE);
-
-      gtk_widget_destroy (gtk_widget_get_toplevel (widget));
-
-      InsertarCompras ();
-
-    }
-  else if (dato == TRUE)
-    {
-      //gtk_widget_set_sensitive (main_window, TRUE);
-
-      gtk_widget_destroy (gtk_widget_get_toplevel (widget));
-
-      CalcularTotales ();
-    }
-}
-
-void
-CanjeablesWindow (void)
-{
-  GtkWidget *window;
-  GtkWidget *vbox;
-  GtkWidget *hbox;
-  GtkWidget *scroll;
-  GtkWidget *button;
-
-  GtkTreeView *tree;
-  GtkTreeStore *store;
-  GtkTreeViewColumn *column;
-  GtkCellRenderer *renderer;
-  GtkTreeIter iter;
-
-  Productos *productos = compra->header;
-
-  gtk_widget_set_sensitive (main_window, FALSE);
-
-  window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
-  gtk_window_set_title (GTK_WINDOW (window), "Lista de productos a canjear");
-  gtk_window_set_position (GTK_WINDOW (window), GTK_WIN_POS_CENTER_ALWAYS);
-  gtk_window_present (GTK_WINDOW (window));
-  gtk_window_set_resizable (GTK_WINDOW (window), FALSE);
-  gtk_widget_show (window);
-
-  vbox = gtk_vbox_new (FALSE, 3);
-  gtk_container_add (GTK_CONTAINER (window), vbox);
-  gtk_widget_show (vbox);
-
-  scroll = gtk_scrolled_window_new (NULL, NULL);
-  gtk_scrolled_window_set_policy (GTK_SCROLLED_WINDOW (scroll),
-                                  GTK_POLICY_AUTOMATIC,
-                                  GTK_POLICY_AUTOMATIC);
-  gtk_widget_set_size_request (scroll, 640, 100);
-  gtk_box_pack_start (GTK_BOX (vbox), scroll, FALSE, FALSE, 3);
-  gtk_widget_show (scroll);
-
-  store = gtk_tree_store_new (8,
-                              G_TYPE_STRING,
-                              G_TYPE_STRING,
-                              G_TYPE_STRING,
-                              G_TYPE_INT,
-                              G_TYPE_STRING,
-                              G_TYPE_INT,
-                              G_TYPE_INT,
-                              G_TYPE_BOOLEAN);
-
-  do
-    {
-      /*      if (productos->product->tasa_canje > 1 && productos->product->stock_pro >= productos->product->tasa_canje)
-              productos->product->cuanto += (productos->product->stock_pro / productos->product->tasa_canje);*/
-
-      productos->product->cuanto = productos->product->stock_pro + (productos->product->stock_pro * ((double)1 / productos->product->tasa_canje));
-
-
-      gtk_tree_store_append (store, &iter, NULL);
-      gtk_tree_store_set (store, &iter,
-                          0, productos->product->barcode,
-                          1, productos->product->producto,
-                          2, productos->product->marca,
-                          3, productos->product->stock_pro,
-                          4, g_strdup_printf ("%d:1", productos->product->tasa_canje),
-                          5, (gint)(productos->product->stock_pro * ((gdouble)1 / productos->product->tasa_canje)),
-                          6, productos->product->cuanto,
-                          7, TRUE,
-                          -1);
-
-      productos->product->canjear = TRUE;
-      productos->product->iter = iter;
-
-      productos = productos->next;
-    }
-  while (productos != compra->header);
-
-
-  tree = GTK_TREE_VIEW (gtk_tree_view_new_with_model (GTK_TREE_MODEL (store)));
-  gtk_tree_view_set_rules_hint (tree, TRUE);
-  gtk_container_add (GTK_CONTAINER (scroll), GTK_WIDGET (tree));
-  gtk_widget_show (GTK_WIDGET (tree));
-
-  renderer = gtk_cell_renderer_text_new ();
-  column = gtk_tree_view_column_new_with_attributes ("Codigo de Barras", renderer,
-                                                     "text", 0,
-                                                     NULL);
-  gtk_tree_view_append_column (tree, column);
-  gtk_tree_view_column_set_alignment (column, 0.5);
-  g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
-  gtk_tree_view_column_set_resizable (column, FALSE);
-
-  renderer = gtk_cell_renderer_text_new ();
-  column = gtk_tree_view_column_new_with_attributes ("Producto", renderer,
-                                                     "text", 1,
-                                                     NULL);
-  gtk_tree_view_append_column (tree, column);
-  gtk_tree_view_column_set_alignment (column, 0.5);
-  g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
-  gtk_tree_view_column_set_min_width (column, 120);
-  gtk_tree_view_column_set_max_width (column, 120);
-  gtk_tree_view_column_set_resizable (column, FALSE);
-
-  renderer = gtk_cell_renderer_text_new ();
-  column = gtk_tree_view_column_new_with_attributes ("Marca", renderer,
-                                                     "text", 2,
-                                                     NULL);
-  gtk_tree_view_append_column (tree, column);
-  gtk_tree_view_column_set_alignment (column, 0.5);
-  g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
-  gtk_tree_view_column_set_min_width (column, 80);
-  gtk_tree_view_column_set_max_width (column, 80);
-  gtk_tree_view_column_set_resizable (column, FALSE);
-
-  renderer = gtk_cell_renderer_text_new ();
-  column = gtk_tree_view_column_new_with_attributes ("Stock Pro", renderer,
-                                                     "text", 3,
-                                                     NULL);
-  gtk_tree_view_append_column (tree, column);
-  gtk_tree_view_column_set_alignment (column, 0.5);
-  g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
-  gtk_tree_view_column_set_min_width (column, 50);
-  gtk_tree_view_column_set_max_width (column, 50);
-  gtk_tree_view_column_set_resizable (column, FALSE);
-
-  renderer = gtk_cell_renderer_text_new ();
-  column = gtk_tree_view_column_new_with_attributes ("Tasa Cambio", renderer,
-                                                     "text", 4,
-                                                     NULL);
-  gtk_tree_view_append_column (tree, column);
-  gtk_tree_view_column_set_alignment (column, 0.5);
-  g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
-  gtk_tree_view_column_set_min_width (column, 80);
-  gtk_tree_view_column_set_max_width (column, 80);
-  gtk_tree_view_column_set_resizable (column, FALSE);
-
-  renderer = gtk_cell_renderer_text_new ();
-  column = gtk_tree_view_column_new_with_attributes ("Adic.", renderer,
-                                                     "text", 5,
-                                                     NULL);
-  gtk_tree_view_append_column (tree, column);
-  gtk_tree_view_column_set_alignment (column, 0.5);
-  g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
-  gtk_tree_view_column_set_resizable (column, FALSE);
-
-  renderer = gtk_cell_renderer_text_new ();
-  g_object_set_data (G_OBJECT (renderer), "column", (gint *)6);
-
-  g_signal_connect (G_OBJECT (renderer), "edited",
-                    G_CALLBACK (edit_cell), (gpointer)tree);
-
-  column = gtk_tree_view_column_new_with_attributes ("Usar", renderer,
-                                                     "text", 6,
-                                                     "editable", 6,
-                                                     NULL);
-  gtk_tree_view_append_column (tree, column);
-  gtk_tree_view_column_set_alignment (column, 0.5);
-  g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
-  gtk_tree_view_column_set_min_width (column, 80);
-  gtk_tree_view_column_set_max_width (column, 80);
-  gtk_tree_view_column_set_resizable (column, FALSE);
-
-  renderer = gtk_cell_renderer_toggle_new ();
-  g_object_set_data (G_OBJECT (renderer), "column", (gint *)7);
-
-  g_signal_connect (G_OBJECT (renderer), "toggled",
-                    G_CALLBACK (toggle_cell), (gpointer)tree);
-
-  column = gtk_tree_view_column_new_with_attributes ("Canjear", renderer,
-                                                     "active", 7,
-                                                     NULL);
-  gtk_tree_view_append_column (tree, column);
-  gtk_tree_view_column_set_alignment (column, 0.5);
-  g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
-  gtk_tree_view_column_set_resizable (column, FALSE);
-
-  hbox = gtk_hbox_new (FALSE, 3);
-  gtk_box_pack_start (GTK_BOX (vbox), hbox, FALSE, FALSE, 3);
-  gtk_widget_show (hbox);
-
-  button = gtk_button_new_from_stock (GTK_STOCK_CANCEL);
-  gtk_box_pack_start (GTK_BOX (hbox), button, FALSE, FALSE, 3);
-  gtk_widget_show (button);
-
-  g_signal_connect (G_OBJECT (button), "clicked",
-                    G_CALLBACK (Canjeables), (gpointer)FALSE);
-
-  button = gtk_button_new_from_stock (GTK_STOCK_OK);
-  gtk_box_pack_end (GTK_BOX (hbox), button, FALSE, FALSE, 3);
-  gtk_widget_show (button);
-
-  g_signal_connect (G_OBJECT (button), "clicked",
-                    G_CALLBACK (Canjeables), (gpointer)TRUE);
-
-}
-
-void
-CheckCanjeables (void)
-{
-
-  if (compra->header == NULL)
-    return ;
-  else
-    {
-      if (LookCanjeable (compra->header) == TRUE)
-        CanjeablesWindow ();
-    }
-}
-
-void
 Pagar (GtkWidget *widget, gpointer data)
 {
   GtkToggleButton *togglebutton = (GtkToggleButton *) data;
@@ -3936,22 +3705,6 @@ CheckMontoIngreso (GtkWidget *btn_ok, gint total, gint total_doc)
 }
 
 void
-CloseAskIngreso (GtkWidget *widget, gpointer data)
-{
-  gboolean answer = ((gboolean) data);
-
-  if (GTK_WIDGET_TOPLEVEL (widget) == TRUE)
-    return;
-
-  if (answer == TRUE)
-    {
-      CheckCanjeables ();
-    }
-  else if (answer == FALSE)
-    gtk_widget_set_sensitive (main_window, TRUE);
-}
-
-void
 AskIngreso (GtkWindow *win_mother)
 {
   GtkWindow *wnd_ingress = GTK_WINDOW (gtk_builder_get_object (builder, "wnd_ingress_buy"));
@@ -4183,7 +3936,6 @@ InformeComprasShow (void)
                               4, PQvaluebycol (res2, j, "subtotal"),
                               -1);
         }
-
     }
 
 }
